--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Base.Theme.EcoMove" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.EcoMove" parent="Base.Theme.EcoMove" />
+
+    <!-- Estilo personalizado para el AlertDialog -->
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/fondo_dialogo</item> <!-- Usar windowBackground en lugar de background -->
+        <item name="android:backgroundDimAmount">0.6</item> <!-- Dim the background -->
+        <item name="android:padding">0dp</item> <!-- Remove default  -->
+        <item name="android:windowMinWidthMajor">90%</item> <!-- Incrementa  width -->
+        <item name="android:windowMinWidthMinor">90%</item> <!-- Incrementa width -->
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
 </resources>
