--- a/app/src/main/res/layout/activity_cambiar_contrasena.xml
+++ b/app/src/main/res/layout/activity_cambiar_contrasena.xml
@@ -2,13 +2,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@drawable/imagen5">
+    android:background="@drawable/im">
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="EcoMove"
         android:textColor="#FFFFFF"
@@ -21,17 +20,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/titleTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
-        android:text="Cambiar Contraseña"
+        android:layout_marginTop="48dp"
+        android:text="Reestablecer contraseña"
         android:textColor="#FFFFFF"
-        android:textSize="16sp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/emailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/subtitleTextView"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="64dp"
         android:hint="Correo Electrónico"
         android:inputType="textEmailAddress"
         android:textColor="#FFFFFF"
@@ -39,12 +38,14 @@
 
     <Button
         android:id="@+id/changePasswordButton"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/emailEditText"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/black_border_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/white_background_button"
         android:text="Enviar Correo de Restablecimiento"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textStyle="bold" />
+
 </RelativeLayout>
