--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@drawable/imagen5">
+    android:background="@drawable/im">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -80,13 +80,14 @@
 
     <Button
         android:id="@+id/registerButton"
-        android:layout_width="match_parent"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/confirmPasswordEditText"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:background="@drawable/black_border_button"
+        android:background="@drawable/white_background_button"
         android:text="Registrarse"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textStyle="bold" />
 
 </RelativeLayout>
