--- a/app/src/main/res/layout/activity_ubicacion_tiempo_real.xml
+++ b/app/src/main/res/layout/activity_ubicacion_tiempo_real.xml
@@ -9,33 +9,22 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="263dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="125dp"
         android:text="ECOMOVE"
         android:textColor="#FFFFFF"
         android:textSize="27sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/subtitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/titulo"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="305dp"
-        android:text="Arrienda, pedalea y conoce"
-        android:textColor="#FFFFFF"
-        android:textSize="10sp" />
-
     <fragment
         android:id="@+id/mapFragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="404dp"
-        android:layout_height="358dp"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
         android:layout_below="@id/menu_button"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="13dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="54dp" />
 
@@ -49,7 +38,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="23dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/menu" />
+        android:src="@drawable/profile2" />
 
     <LinearLayout
         android:id="@+id/menu_superpuesto"
@@ -90,29 +79,14 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button_ver_todas_rutas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="19dp"
-        android:background="@drawable/black_border_button"
-        android:padding="16dp"
-        android:text="Ver Todas las Rutas"
-        android:textColor="#FFFFFF"
-        android:textSize="13sp"
-        android:textStyle="bold" />
-
-
-    <Button
         android:id="@+id/button_ruta_mas_cercana"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/mapFragment"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="139dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="36dp"
         android:background="@drawable/black_border_button"
         android:padding="16dp"
         android:text="Ruta Más Cercana"
@@ -120,29 +94,14 @@
         android:textSize="13sp"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button_ir_a_ubicacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="264dp"
-        android:layout_marginBottom="154dp"
-        android:background="@drawable/black_border_button"
-        android:padding="16dp"
-        android:text="Ir a Mi Ubicación"
-        android:textColor="#FFFFFF"
-        android:textSize="13sp"
-        android:textStyle="bold" />
-
     <ImageView
         android:id="@+id/button_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="265dp"
-        android:layout_marginBottom="4dp"
+        android:layout_width="55dp"
+        android:layout_height="63dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:contentDescription="Cerrar Sesión"
         android:src="@drawable/flecha" />
 
