--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="azul">#65D9E2</color>
     <color name="hint_white_blurry">#80FFFFFF</color>
     <color name="my_light_primary">#6200EE</color>
     <color name="my_dark_primary">#121212</color>
