--- a/app/src/main/res/layout/activity_localizacion.xml
+++ b/app/src/main/res/layout/activity_localizacion.xml
@@ -5,32 +5,43 @@
     tools:context=".Localizacion"
     android:background="@drawable/ninguno">
 
+    <!-- Botón para retroceder -->
+    <ImageView
+        android:id="@+id/volverButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="volver"
+        android:src="@drawable/flecha" />
+
     <TextView
         android:id="@+id/tituloTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="Sucursal"
-        android:textSize="24sp"
-        android:textColor="@android:color/black"/>
+        android:textSize="18sp"
+        android:textColor="@android:color/white"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/deslizadorBicicletas"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="575dp"
         android:layout_below="@id/tituloTextView"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/contenidoEstatico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/deslizadorBicicletas"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:padding="16dp"
+        android:padding="8dp"
         android:text="Contenido Estático 1"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"/>
+        android:textSize="14sp"
+        android:textColor="@android:color/white"/>
 </RelativeLayout>
