--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@drawable/im">
+    android:background="@drawable/bike_login">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,14 +67,14 @@
 
         <Button
             android:id="@+id/loginButton"
-            android:layout_width="280dp"
+            android:layout_width="227dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
             android:background="@drawable/white_background_button"
             android:text="Iniciar sesión"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
