--- a/app/src/main/res/layout/item_bicicleta.xml
+++ b/app/src/main/res/layout/item_bicicleta.xml
@@ -14,31 +14,33 @@
 
     <ImageView
         android:id="@+id/imagenBicicletaImageView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="343dp"
+        android:layout_height="375dp"
         android:layout_below="@id/tituloBicicletaTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_bike_placeholder"/>
-
-    <TextView
-        android:id="@+id/existenciasBicicletaTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imagenBicicletaImageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="Existencias: "
-        android:textSize="18sp"
-        android:textColor="@android:color/black"/>
+        android:src="@drawable/ic_bike_placeholder" />
 
     <Button
         android:id="@+id/reservarButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/existenciasBicicletaTextView"
+        android:layout_below="@id/imagenBicicletaImageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/black_border_button"
+        android:text="Reservar"
+        android:textColor="@android:color/white"/>
+
+    <TextView
+        android:id="@+id/existenciasBicicletaTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/reservarButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="Reservar"/>
+        android:text="Existencias: "
+        android:textSize="18sp"
+        android:textColor="@android:color/black"/>
 </RelativeLayout>
