--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="my_dark_primary">#121212</color>
     <color name="button_cancel">#B0BEC5</color> <!-- Color gris para cancelar -->
     <color name="button_logout">#D32F2F</color> <!-- Color rojo para cerrar sesión -->
+    <color name="verde">#4CAF50</color> <!-- Color verde para guardar -->
 </resources>
