--- a/app/src/main/res/layout/item_bicicleta.xml
+++ b/app/src/main/res/layout/item_bicicleta.xml
@@ -10,7 +10,7 @@
         android:layout_marginTop="20dp"
         android:text="Bicicleta"
         android:textSize="24sp"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/white"/>
 
     <ImageView
         android:id="@+id/imagenBicicletaImageView"
