--- a/app/src/main/res/layout/item_bicicleta.xml
+++ b/app/src/main/res/layout/item_bicicleta.xml
@@ -42,5 +42,5 @@
         android:layout_marginTop="10dp"
         android:text="Existencias: "
         android:textSize="18sp"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/white"/>
 </RelativeLayout>
